# primarymagic-research

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
config/: paths.example.toml  shifted_sequences.csv
notebooks/: demo_classification.ipynb  demo_combos2.ipynb  demo_combos3.ipynb  demo_differential_classification.ipynb  demo_dipeptide_classification.ipynb  demo_multilabel_autoencoder.ipynb  demo_preprocess.ipynb  demo_tripeptide_classification.ipynb  demo_tripeptides.ipynb  explore_data.ipynb  sequence_classification_1.ipynb  sequence_classification_2.ipynb  sequence_classification_3.ipynb  sequence_classification_4_autoencoder.ipynb  sequence_classification_5_extended_training.ipynb
scripts/: analyze_sgaf_pass_fail.py  backfill_snr.py  batch_snr_calculation.py  collect_fingerprints.py  compare_ae_vs_sequencer.py  compare_dipeptide_vs_amino_acids.py  compare_explanations.py  compare_ots_vs_custom.py  compare_simulation.py  compare_simulation_reps.py  convert_simulation.py  copy_aminoacid_data.py  copy_peptide_data.py  cosmic_ray_investigation.py  count_old_only_pass.py  debug_baseline_removal.py  debug_bubblefill.py  debug_wavelet_denoising.py  demo.py  diagnose_d_vs_s.py  diagnose_fard_fards.py  diagnose_sgaf_sample_584.py  diagnose_tripeptide_drop.py  diagnose_vs_s.py  evaluate_classifier_26.py  evaluate_joint_sequencer.py  evaluate_sequencer.py  explain_classifier.py  explain_sequencer.py  export_npz_to_csv.py  ga_amplitude_analysis.py  generate_dipeptide_batches.py  generate_peptide_summary.py  generate_sequence_samples.py  generate_synthetic_noisy_data.py  inspect_api.py  inspect_peak_intensity_hit_rate.py  inspect_stage3_random_samples.py  plot_canonical_amino_acid_fingerprints.py  plot_decoupled_v1.py  (+20 more)
