[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primarymagic-research"
version = "0.1.0"
description = "Research notebooks and scripts using the primarymagic Raman library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mfarzi"}
]
dependencies = [
    "primarymagic @ git+ssh://git@github.com/mfarzi/primarymagic@v0.1.1",
    "orplib>=1.0.10",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.4"]
ml = ["torch>=2.0.0", "scikit-learn>=1.0.0", "PyWavelets>=1.4.0", "captum>=0.7.0"]

[tool.setuptools]
packages = []
