[project]
name = "primarymagic-research"
version = "0.1.0"
description = "Research notebooks and scripts using the primarymagic Raman library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mfarzi"}
]
dependencies = [
    "primarymagic[ml] @ git+ssh://git@github.com/mfarzi/primarymagic@v0.1.3",
    "orplib>=1.0.10",
    "pandas>=2.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    # Workaround: orplib pulls in pyqt5 (GUI), and newer pyqt5-qt5 lacks
    # Windows wheels. Pin to a version that does have them on Windows.
    "pyqt5-qt5<5.15.3 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = ["pytest>=7.0.0", "ruff>=0.4"]

[tool.uv]
# This is a workspace, not an installable Python package. uv manages the
# environment from this file but never tries to build/install the repo as
# a package.
package = false
